2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-stock.h:
	* games-stock.c: Add support for local in the theme.

2005-07-29  Dennis Cranston <dennis_cranston@yahoo.com>

	* games-scores-dialog.c: (games_scores_dialog_set_message):  
	Add mnemonic to new game button.
	
2005-07-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-controls.c: gconf_engine_* calls don't handle a NULL
	engine argument so we have to explicitly check for errors at each
	stage. FIxes bug #300423.

2005-07-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores.c: 
	* games-network-dialog.c: 
	* games-network.c: Fixed for gcc 4.0 warnings. Note the extra NULL
	in the gtk_dialog_new_with_buttons because gcc believes that
	first_button_text is mandatory.

2005-07-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-server.py: Make it become a proper Unix daemon. This
	should fix bug #172171.

2005-07-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-network-dialog.c (network_game_dialog_show): Change the
	initial status message to be a little less clunky.

2005-07-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* libgnomegames.schemas.in: players -> player's. Spotted by Clytie
	Siddall.

2005-07-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (EXTRA_DIST): Insert the correct file list for the
	schemas. Add schema_DATA to DISTCLEANFILES. This should fix a
	"make distcheck" problem.

2005-07-08  Richard Hoelscher  <rah@rahga.com>

	* games-preimage.[c|h]: Fix for warnings related to buffer signedness.

2005-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am
	* games-scores.c:
	* games-scores.h:
	* games-score.c:
	* games-score.h:
	* games-scores-backend.c:
	* games-scores-backend.h:
	* games-scores.gob: Ditch gob for games-scores*, create pure C
	versions of everything. It even compiles now. Nothing useful
	happens though.

2005-07-07  Richard Hoelscher  <rah@rahga.com>

	* games-scores.[c|h]: