@@ -1,4 +1,4 @@
-/* Generated by GOB (v2.0.11) on Thu Jul  7 23:17:14 2005
+/* Generated by GOB (v2.0.11) on Fri Aug  5 19:33:45 2005
    (do not edit directly) */
 
 /* End world hunger, donate to the World Food Programme, http://www.wfp.org */
@@ -662,7 +662,7 @@ games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
     }
 
     if (buttons & GAMES_SCORES_NEW_GAME_BUTTON) {
-	gtk_dialog_add_button (GTK_DIALOG (self), _("_New Game"),
+	gtk_dialog_add_button (GTK_DIALOG (self), _("New Game"),
 	                       GTK_RESPONSE_ACCEPT);
         gtk_dialog_set_default_response (GTK_DIALOG (self), 
 	       			         GTK_RESPONSE_ACCEPT);
