@@ -1,3 +1,8 @@
+2005-08-05  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* Makefile.am (%.c %.h %-private.h): Reinstate the gob rule. I had
+	been disabled for diagnostic reasons and not reinstated.
+
 2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* games-stock.h:
